issue-1 ― IntelliJ still having issues in running Gradle tests.