@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    testImplementation(kotlin("test-junit5"))
     detektPlugins("io.gitlab.arturbosch.detekt:detekt-formatting:1.22.0")
     detektPlugins("io.gitlab.arturbosch.detekt:detekt-rules-libraries:1.22.0")
     detektPlugins("io.gitlab.arturbosch.detekt:detekt-rules-ruleauthors:1.22.0")
@@ -49,14 +50,19 @@ tasks {
         }
     }
 
-    named<Test>("test") {
+    test {
+        maxHeapSize = "1024m"
         useJUnitPlatform()
+        jvmArgs(
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED"
+        )
         testLogging {
             events ("passed", "skipped", "failed")
         }
-        maxHeapSize = "1024m"
     }
 }
+
 
 kotlinter {
     ignoreFailures = false
